Changelog
=========

2.0b11 (unreleased)
-------------------

- Add attributes ``data-title`` and ``data-desc`` to the image links that can be
  used by JS Galleries to display title and descrition. [fRiSi]

- Add ``img_url`` key to the data-dictionary so customized templates can build
  an image tag instead of beeing limited to what ``IImage.getImage(size)``
  returns. [fRiSi]

2.0b10 (2014-07-22)
-------------------

- Added italian translation [davidemoro]


2.0b9 (2013-07-01)
------------------

* Only show hidden images when in editing mode (introduced in raptus.article.core 2.0b13)

* Add a property ``gallery_rel_attribute`` to be able to use a js-gallery
  product other than `Products.jsImagePopups`.

  eg set it to ``prettyPhoto`` to use `collective.prettyphoto`.
  [fRiSi]

* Added property to configure the maximum number of gallery items
  to be displayed.
  [fRiSi]

* For SEO reasons, the images link to article/image1/view now (used
  to link to article/image1/image in preview size)

  An additional javascript fixes the link for the javascript galleries.
  [fRiSi]

2.0b8 (2011-03-21)
------------------

* Now using the show/hide functionality added in raptus.article.core 2.0b8
* Render XHTML valid page template
  [saily]

2.0b6 (2010-12-07)
------------------

* fix franz translation

2.0b5 (2010-11-10)
------------------

* Added French translations

2.0b4 (2010-10-24)
------------------

* Set zip_safe flag to False

2.0b3 (2010-10-21)
------------------

* Updated readme and manual

2.0b2 (2010-10-20)
------------------

* First public release