@@ -11,10 +11,10 @@
         <tal:item repeat="item view/images">
         <li class="component"
             tal:condition="item/img"
-            tal:attributes="class string:component ${item/class}">
+            tal:attributes="class string:component item ${item/class}">
 
             <metal:manage use-macro="context/raptus_article_macros/macros/manage" />
-            <a href=""
+            <a href="" class="img"
                tal:omit-tag="not: item/url"
                tal:attributes="href item/viewUrl;
                                rel item/rel;
@@ -22,7 +22,7 @@
                                data-title item/brain/Title;
                                data-desc item/description;
                                data-popupUrl item/url">
-                <span tal:omit-tag="item/url">
+                <span tal:omit-tag="item/url" class="img">
                     <img src="" tal:replace="structure item/img" />
                 </span>
             </a>
