@@ -16,6 +16,17 @@ from raptus.article.core import RaptusArticleMessageFactory as _
 from raptus.article.core import interfaces
 from raptus.article.images.interfaces import IImages, IImage
 
+import pkg_resources
+
+
+try:
+    pkg_resources.get_distribution('plone.app.imagecropping')
+except pkg_resources.DistributionNotFound:
+    HAS_CROPPING = False
+else:
+    HAS_CROPPING = True
+
+
 class IGalleryLeft(interface.Interface):
     """ Marker interface for the gallery left viewlet
     """
@@ -43,13 +54,22 @@ class ViewletLeft(ViewletBase):
     css_class = "componentLeft gallery-left"
     thumb_size = "galleryleft"
     component = "gallery.left"
-    type="left"
+    type = "left"
+
+    def update(self):
+        super(ViewletLeft, self).update()
+        props = getToolByName(self.context, 'portal_properties').raptus_article
+        self.show_description = props.getProperty('gallery_%s_description' % self.type, False)
+        self.maxItems = props.getProperty('gallery_%s_maxitems' % self.type, 0)
+        self.relAttr = props.getProperty('gallery_rel_attribute', 'lightbox')
+        self.scale = props.getProperty('images_gallery%s_scale' % self.type, None)
+        self.use_scale = self.scale is not None
 
     def _class(self, brain, i, l):
         cls = []
         if i == 0:
             cls.append('first')
-        if i == l-1:
+        if i == l - 1:
             cls.append('last')
         if i % 2 == 0:
             cls.append('odd')
@@ -57,13 +77,6 @@ class ViewletLeft(ViewletBase):
             cls.append('even')
         return ' '.join(cls)
 
-    @property
-    def show_description(self):
-        return self._getProperty('gallery_%s_description' % self.type, False)
-
-    @property
-    def maxItems(self):
-        return self._getProperty('gallery_%s_maxitems' % self.type, 0)
 
     def _getProperty(self, propertyName, default=None):
         props = getToolByName(self.context, 'portal_properties').raptus_article
@@ -84,7 +97,6 @@ class ViewletLeft(ViewletBase):
         items = manageable.getList(items, self.component)
         i = 0
         l = len(items)
-        relAttribute = self._getProperty('gallery_rel_attribute','lightbox')
 
         for item in items:
             img = IImage(item['obj'])
@@ -98,14 +110,16 @@ class ViewletLeft(ViewletBase):
                          'viewUrl': None})
             if item.has_key('show') and item['show']:
                 item['class'] += ' hidden'
-            if (self.maxItems and i>=self.maxItems) and not canManage:
+            if (self.maxItems and i >= self.maxItems) and not canManage:
                 item['class'] += ' invisible'
             w, h = item['obj'].getSize()
             tw, th = img.getSize(self.thumb_size)
             if (tw < w and tw > 0) or (th < h and th > 0):
-                item['rel'] = '%s[%s]' % (relAttribute, self.css_class)
+                item['rel'] = '%s[%s]' % (self.relAttr, self.css_class)
                 item['url'] = img.getImageURL(size="popup")
-                item['viewUrl'] = item['obj'].absolute_url()+ '/view'
+                item['viewUrl'] = item['obj'].absolute_url() + '/view'
+            if canManage and self.use_scale and HAS_CROPPING:
+                item['crop'] = '%s/@@croppingeditor?scalename=%s' % (item['obj'].absolute_url(), self.scale)
             i += 1
         return items
 
