@@ -5,13 +5,14 @@
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:cmf="http://namespaces.zope.org/cmf"
     i18n_domain="raptus.article">
-      
+
     <include package="raptus.article.images" />
-    
+
     <five:registerPackage package="." />
 
     <!-- Include the sub-packages that use their own configure.zcml files. -->
     <include package=".browser" />
+    <include package=".upgrades" />
 
     <!-- Register the installation GenericSetup extension profile -->
     <genericsetup:registerProfile
