@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0003</version>
+  <version>0004</version>
   <dependencies>
     <dependency>profile-raptus.article.images:default</dependency>
   </dependencies>
