@@ -4,6 +4,11 @@ Changelog
 2.0b11 (unreleased)
 -------------------
 
+- Add support for plone.app.imaging scales to be able to use
+  `plone.app.imagecropping`__ [fRiSi]
+
+  .. __: https://pypi.python.org/pypi/plone.app.imagecropping
+
 - Add attributes ``data-title`` and ``data-desc`` to the image links that can be
   used by JS Galleries to display title and descrition. [fRiSi]
 
